# upgraded-fishstick

./: AUTO_PROXY_GUIDE.md  AUTO_PROXY_INTEGRATION.md  BUILD_APK_GUIDE.md  CHECKLIST.md  FILES_SUMMARY.md  GITHUB_ACTIONS_BUILD.md  PROXY_README.md  QUICK_START.md  README.md
.github/workflows/: build_proxy_apk.yml  build_simple_proxy_apk.yml
chrome/android/java/res/layout/: activity_auto_proxy.xml  activity_proxy_settings.xml
chrome/android/java/src/org/chromium/chrome/browser/proxy/: AutoProxyActivity.java  ProxyConfig.java  ProxyFetcher.java  ProxyManager.java  ProxyQuickToggle.java  ProxySettingsActivity.java  ProxyTester.java
chrome/browser/proxy/: BUILD.gn  INTEGRATION_EXAMPLE.md  README_PROXY_INTEGRATION.md  kiwi_proxy_config_service.cc  kiwi_proxy_config_service.h  proxy_manager_android.cc  proxy_manager_android.h
